--- a/Lampu-Saklar.html
+++ b/Lampu-Saklar.html
@@ -22,7 +22,7 @@
                         <div class="flex flex-col gap-2 items-center">
                             <img src="asset/image/off.gif" id="lampu1">
                             <label class="relative inline-flex items-center cursor-pointer">
-                                <input type="checkbox" value="" id="default-toggle1" class="sr-only peer"  onchange="saklar()">
+                                <input type="checkbox" value="" id="toggle1" class="sr-only peer"  onchange="saklar()">
                                 <div class="w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
                             </label>
                         </div>
@@ -32,7 +32,7 @@
                         <div class="flex flex-col gap-2 items-center">
                             <img src="asset/image/off.gif" id="lampu2">
                             <label class="relative inline-flex items-center cursor-pointer">
-                                <input type="checkbox" value="" id="default-toggle2" class="sr-only peer"  onclick="saklar()">
+                                <input type="checkbox" value="" id="toggle2" class="sr-only peer"  onclick="saklar()">
                                 <div class="w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
                             </label>
                         </div>
@@ -43,7 +43,7 @@
                         <div class="flex flex-col gap-2 items-center">
                             <img src="asset/image/off.gif" id="lampu3">
                             <label class="relative inline-flex items-center cursor-pointer">
-                                <input type="checkbox" value="" id="default-toggle3" class="sr-only peer" onclick="saklar()">
+                                <input type="checkbox" value="" id="toggle3" class="sr-only peer" onclick="saklar()">
                                 <div class="w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
                             </label>
                         </div>            
@@ -55,7 +55,7 @@
                         <caption class="caption-bottom font-mono">
                         <p>Saklar Utama</p>
                         <label class="relative inline-flex items-center cursor-pointer ">
-                            <input type="checkbox" value="" id="default-toggle4" class="sr-only peer" onclick="saklar1()">
+                            <input type="checkbox" value="" id="toggleU" class="sr-only peer" onclick="saklar1()">
                             <div class="w-11 h-6 bg-gray-200 rounded-full peer peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-blue-800 dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-0.5 after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-blue-600"></div>
                         </label>
                         </caption>
